# inception-axum

./: .env.example  Cargo.toml  Dockerfile
migrations/2024-12-15-032643_create_users/: down.sql  up.sql
migrations/2025-03-18-083416_exchange/: down.sql  up.sql
migrations/2025-07-21-120111_companies/: down.sql  up.sql
migrations/2025-08-04-123532_whatsapp_sessions/: down.sql  up.sql
migrations/2025-08-10-033326_whatsapp_messages/: down.sql  up.sql
migrations/2025-08-23-051029_whatsapp_sessions_deleted/: down.sql  up.sql
migrations/2025-08-25-142314_api_keys/: down.sql  up.sql
migrations/2025-08-27-092433_whatsapp_notifications/: down.sql  up.sql
migrations/2025-09-02-112554_country_code/: down.sql  up.sql
migrations/2025-09-06-020713_whatsapp_sessions_limit/: down.sql  up.sql
migrations/2025-09-08-141103_whatsapp_environment/: down.sql  up.sql
migrations/2025-09-13-075608_whatsapp_message_status/: down.sql  up.sql
migrations/2025-09-20-081148_wa_status_fail/: up.sql
migrations/2025-10-13-035130_wa_media_url/: down.sql  up.sql
migrations/2025-10-13-090242_wa_payments/: down.sql  up.sql
migrations/2025-10-14-034415_session_disconnect/: down.sql  up.sql
migrations/2025-10-14-074308_wa_payment_status/: down.sql  up.sql
migrations/2025-10-15-023526_wa_payment_notif/: down.sql  up.sql
migrations/2025-11-01-074249_wa_disconnected_status/: down.sql  up.sql
migrations/2025-11-18-112029_wa_session_name/: down.sql  up.sql
migrations/2025-11-22-081802_wa_country_code_removal/: down.sql  up.sql
src/: db.rs  main.rs  schema.rs
(+46 files in other folders)
